[package]
name = "webcrypt-usbip"
version = "0.1.0"
authors = ["Szczepan Zalega <szczepan@nitrokey.com>"]
edition = "2021"

[[bin]]
name = "usbip-simulation"
path = "src/bin/main.rs"

[dependencies]
chacha20 = { version = "0.7", features = ["rng"] }
generic-array = "0.14.3"
heapless = "0.7"
interchange = "0.2.0"
nb = "1"
log = { version = "0.4.14", default-features = false }
clap = { version = "3.0.0", features = ["derive"] }
clap-num = "1.0.0"

apdu-dispatch = "0.1"
ctap-types = "0.1"
ctaphid-dispatch = "0.1"
admin-app = "0.1"
fido-authenticator = { version = "0.1", features = ["dispatch"] }
trussed = { version = "0.1", features = ["clients-5"] }

# components
usbd-ctaphid = { path = "components/usbd-ctaphid" }
webcrypt = { git = "https://github.com/Nitrokey/nitrokey-webcrypt-rust.git", branch="main" }

# storage
littlefs2 = "0.3.1"

# USB related
usbip-device = "*"
usb-device = { version = "0.2.7", default-features = false }

# Optional
pretty_env_logger = { version = "0.4.0", optional = true }

[features]
default = ["no-buttons"]
enable-logs = ["pretty_env_logger", "admin-app/log-all", "fido-authenticator/log-all", "webcrypt/enable-logs"]

# Use to auto-succeed every user presence check
no-buttons = []

# Reconfigure the NFC chip in any case
reconfigure-nfc = []

log-all = []
log-none = []
log-info = []
log-debug = []
log-warn = []
log-error = []

[patch.crates-io]
trussed = { git = "https://github.com/Nitrokey/trussed.git", branch="webcrypt-devel" }
ctaphid-dispatch = { git = "https://github.com/Nitrokey/ctaphid-dispatch.git", branch="multiple_apps" }
apdu-dispatch = { git = "https://github.com/Nitrokey/apdu-dispatch.git", branch="sz-multiple-apps" }
usbip-device = { git = "https://github.com/sawchord/usbip-device", rev = "4c4de04" }